# IMUtils

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/IMUtils/: Bbox.py  CropRegion.py  FrameExtractor.py  ImageOps.py  Multiprocess.py  Preprocess.py  Types.py  __init__.py
src/IMUtils/cli/: frame_extractor.py
src/IMUtils_alsmeirelles/: preprocess.py
tests/: conftest.py  test_cropregion.py  test_imageops.py
