[tool.poetry]
name = "IMUtils"
version = "1.0.3"
description = "A Helper to deal with images and training data"
authors = ["André L.S. Meirelles <alsmeirelles@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alsmeirelles/IMUtils"
repository = "https://github.com/alsmeirelles/IMUtils"
documentation = "https://github.com/alsmeirelles/IMUtils"
keywords = ["image-processing", "machine-learning", "data-preparation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "IMUtils", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
opencv-python = ">=4.5.3,<5.0.0"
numpy = ">2.0.0,<3.0.0"
tqdm = ">=4.64"
decord = ">=0.6.0"

# Optional deps (note: put versions/markers here, and mark optional=true)
matplotlib = { version = ">=3.7", optional = true }
PyGObject = { version = "*", optional = true, markers = "platform_system != 'Windows'" }

[tool.poetry.extras]
# Extras must reference the *names* defined above, without versions/markers
vis = ["matplotlib", "PyGObject"]

[tool.poetry.scripts]
# Console entry point: `imutils-frames ...`
imutils-frames = "IMUtils.cli.frame_extractor:main"

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"
