[project]
name = "IMUtils"
version = "1.0.6"
description = "Image and video processing utilities."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Andre L. S. Meirelles" }
]
dependencies = [
    "numpy>2.0.0,<3.0.0",
    "opencv-python>=4.5.3,<5.0.0",
    "pillow>=12.1.1",
    "pillow-heif",
    "tqdm>=4.64",
    "decord>=0.6.0",
]

[project.optional-dependencies]
vis = [
    "matplotlib",
#    "PyGObject; sys_platform == 'linux'",
]

dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
imutils-frames = "IMUtils.cli.frame_extractor:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/IMUtils"]

[tool.hatch.build.targets.sdist]
include = [
    "src/IMUtils",
    "README.md",
    "pyproject.toml",
]

[tool.uv]
package = true